--- a/CV1.html
+++ b/CV1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>personal cv</title>
 </head>
 <body>
 <title> CV </title>
@@ -28,9 +28,6 @@
 <hr>
 <h2>Experiences: Clean up 9/11 mess</h2>
 <hr>
-<h2>Goal: Run a construction company, dominate the industry and become a monopoly who will run the world </h2>
-
-
-
+<h2>Goal: Run a construction company, dominate the industry and become a monopoly</h2>
 </body>
 </html>
