--- a/CV1.1.html
+++ b/CV1.1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>personal cv</title>
+    <title>Title</title>
 </head>
 <body>
 <title> CV </title>
