--- a/Creatingtable1.html
+++ b/Creatingtable1.html
@@ -12,6 +12,9 @@
     table {
         background: lightcyan
     }
+    c{
+        color:orange;
+    }
 
 </style>
 <table>
@@ -28,24 +31,24 @@
     </tr>
     <tr>
         <td rowspan="4" style="vertical-align: top;">Interest</td>
-        <td><input type="checkbox">Sport</td>
-        <td><input type="checkbox">Music</td>
-        <td><input type="checkbox">Read</td>
+        <td><input type="checkbox"><c>Sport</c></td>
+        <td><input type="checkbox"><c>Music</c></td>
+        <td><input type="checkbox"><c>Read</c></td>
     </tr>
     <tr>
-        <td><input type="checkbox">Web</td>
-        <td><input type="checkbox">Gaming</td>
-        <td><input type="checkbox">Movies</td>
+        <td><input type="checkbox"><c>Web</c></td>
+        <td><input type="checkbox"><c>Gaming</c></td>
+        <td><input type="checkbox"><c>Movies</c></td>
     </tr>
     <tr>
-        <td><input type="checkbox">Travel</td>
+        <td><input type="checkbox"><c>Travel</c></td>
     </tr>
     <tr>
         <td>
             <input type="button" name="btSubmit" value="Submit">
         </td>
         <td>
-            <input type="button" name="btFillAgain" value="Fill Again">
+            <input type="button" name="resetFillAgain" value="Fill Again">
         </td>
     </tr>
 
